# researcher-service

./: .gitmodules  Cargo.toml  README.md
src/: lib.rs  main.rs  router.rs
src/controllers/: data.rs  mod.rs  parse.rs  scrape.rs
src/routes/: data.rs  mod.rs  parse.rs  root.rs
src/services/: data.rs  parser.rs  scrape.rs
