[package]
name = "eth-researcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.9"
serde = "1.0.215"
serde_json = "1.0.133"
tokio = "1.41.1"
tower-http = "0.6.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
