[package]
name = "eth-researcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tower-http = "0.6.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
pulldown-cmark = "0.9"
dotenv = "0.15"
